examples/test/testpolicy16584.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16584
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key47: value40
      key37: value3
      key15: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value6
          key46: value28
          key15: value32
      podSelector:
        matchLabels:
          key33: value46
